--- a/src/components/formElements/controlGroup/_control-list.scss
+++ b/src/components/formElements/controlGroup/_control-list.scss
@@ -16,8 +16,8 @@
     border-inline-end: 1px solid $color-border;
     border-block-end: 1px solid $color-border;
     border-block-start: 1px solid $color-border;
-    background: #fff;
-    margin-top: -0.5px;
+    background: $color-white;
+    margin-top: -1px;
 
     &:last-child {
       border-right-color: $color-border;
