--- a/src/components/formElements/controlGroup/_control-list.scss
+++ b/src/components/formElements/controlGroup/_control-list.scss
@@ -6,13 +6,18 @@
   align-items: center;
   border-inline-start: 1px solid $color-border;
 
-  label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: rem(68px);
-    height: rem(68px);
-    cursor: pointer;
+  &.with-icon {
+    gap: 12px;
+
+    .control-item {
+      border: 1px solid $color-border;
+
+      .control-label {
+        width: rem(100px);
+        height: rem(120px);
+        background-color: $color-light-gray-30;
+      }
+    }
   }
 
   .control-item {
@@ -23,22 +28,17 @@
     background: $color-white;
     margin-top: -1px;
 
-    &:last-child {
-      border-right-color: $color-border;
+    .control-label {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: rem(68px);
+      height: rem(68px);
+      cursor: pointer;
     }
 
-    &.large {
-      gap: 12px;
-
-      .control-item {
-        border: 1px solid $color-border;
-      }
-
-      label {
-        width: rem(100px);
-        height: rem(120px);
-        background-color: $color-light-gray-30;
-      }
+    &:last-child {
+      border-right-color: $color-border;
     }
 
     &:has(input[type='checkbox']:checked) {
@@ -51,7 +51,7 @@
     }
 
     &:has(input[type='radio']:disabled) {
-      label {
+      .control-label {
         text-decoration-line: line-through;
         text-decoration-thickness: 2px;
         white-space: pre;
