--- a/src/components/formElements/controlGroup/_control-list.scss
+++ b/src/components/formElements/controlGroup/_control-list.scss
@@ -6,6 +6,15 @@
   align-items: center;
   border-inline-start: 1px solid $color-border;
 
+  .control-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: rem(68px);
+    height: rem(68px);
+    cursor: pointer;
+  }
+
   &.with-icon {
     gap: 12px;
 
@@ -20,6 +29,7 @@
     }
   }
 
+  /* stylelint-disable-next-line no-descending-specificity */
   .control-item {
     border: 1px solid transparent;
     border-inline-end: 1px solid $color-border;
@@ -27,15 +37,6 @@
     border-block-start: 1px solid $color-border;
     background: $color-white;
     margin-top: -1px;
-
-    .control-label {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: rem(68px);
-      height: rem(68px);
-      cursor: pointer;
-    }
 
     &:last-child {
       border-right-color: $color-border;
