--- a/src/pages/SingleProductPage.styles.scss
+++ b/src/pages/SingleProductPage.styles.scss
@@ -8,13 +8,13 @@
     width: 100%;
     margin-top: 32px;
 
-    .title {
-      text-transform: uppercase;
-      font-family: $font-primary-bold;
-      font-size: $font-small;
-      font-weight: normal;
-      margin: 0;
-    }
+    // .title {
+    //   text-transform: uppercase;
+    //   font-family: $font-primary-bold;
+    //   font-size: $font-small;
+    //   font-weight: normal;
+    //   margin: 0;
+    // }
   }
 
   .product-discont-price {
