--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -23,8 +23,8 @@
 }
 
 .option-box {
-  width: 24px;
-  height: 24px;
+  width: rem(24px);
+  height: rem(24px);
   border: 1px solid transparent;
 }
 
