--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -4,12 +4,14 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 4px;
 
-  .product-label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .product-list-item {
+    border: 1px solid transparent;
+  }
+
+  .product-content {
+    display: inline-grid;
+    place-content: center;
     width: rem(68px);
     height: rem(68px);
 
@@ -23,8 +25,10 @@
       height: rem(24px);
     }
   }
+}
 
-  .product-list-item {
-    border: 1px solid transparent;
+.color-list {
+  .product-list {
+    gap: 4px;
   }
 }
