--- a/src/components/productLists/_product-list.scss
+++ b/src/components/productLists/_product-list.scss
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   align-items: center;
 
-  .product-content {
+  .product-list-content {
     display: flex;
     justify-content: center;
     align-items: center;
