--- a/src/components/formElements/controlGroup/_control-list.scss
+++ b/src/components/formElements/controlGroup/_control-list.scss
@@ -51,15 +51,7 @@
 
     &:has(input[type='radio']:disabled) {
       .control-label {
-        text-decoration-line: line-through;
-        text-decoration-thickness: 2px;
-        white-space: pre;
-
-        &::after,
-        &::before {
-          content: ' ';
-          display: flex;
-        }
+        cursor: default;
       }
     }
   }
