--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -100,3 +100,15 @@
   background-color: transparent;
   color: $color-danger;
 }
+
+.unavailable {
+  text-decoration-line: line-through;
+  text-decoration-thickness: 2px;
+  white-space: pre;
+
+  &::after,
+  &::before {
+    content: ' ';
+    display: flex;
+  }
+}
