--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -48,3 +48,10 @@
     stroke: $color-gray-40;
   }
 }
+
+.option-group-title {
+  .title {
+    margin-bottom: 4px;
+    font-size: 0.875rem;
+  }
+}
