--- a/src/components/formElements/controlGroup/_control-list.scss
+++ b/src/components/formElements/controlGroup/_control-list.scss
@@ -39,6 +39,10 @@
     &:has(input[type='checkbox']:checked) {
       background-color: $color-background-secondary;
       color: $color-white;
+
+      &:has(input:focus-visible) {
+        @include outline($color-gray-80);
+      }
     }
 
     &:has(input[type='radio']:checked) {
