--- a/src/components/formElements/controlGroup/_control-list.scss
+++ b/src/components/formElements/controlGroup/_control-list.scss
@@ -50,7 +50,7 @@
     }
 
     &:has(input:focus-visible) {
-      @include outline($color-blue-30);
+      @include outline;
     }
 
     &:has(input[type='radio']:disabled) {
