--- a/src/components/formElements/controlGroup/_control-list.scss
+++ b/src/components/formElements/controlGroup/_control-list.scss
@@ -46,7 +46,7 @@
     }
 
     &:has(input[type='radio']:checked) {
-      border-color: $color-black;
+      border-color: $color-gray-80;
     }
 
     &:has(input:focus-visible) {
