--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -23,7 +23,6 @@ $color-gray-40: #d9d6d6;
 $color-gray-60: #99a4a9;
 $color-gray-70: #66606d;
 $color-gray-80: #1e211d;
-$color-gray-90: #020101;
 
 // Light gray colors
 $color-light-gray: #f1f1f1;
@@ -36,11 +35,11 @@ $color-light-gray-40: #e9e9ea;
 $color-border: $color-gray-30;
 $color-border-dark: $color-gray-60;
 $color-border-radio: $color-blue-30;
-$color-primary: $color-gray-90;
+$color-primary: $color-gray-80;
 $color-secondary: $color-light-gray-30;
 $color-background: $color-light-gray-20;
 $color-background-secondary: $color-blue-30;
-$color-overlay: rgb($color-black, 0.6);
+$color-overlay: rgb($color-gray-80, 0.6);
 
 // Message popup colors
 $color-danger: $color-red-20;
