--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -30,7 +30,8 @@
   }
 
   @include max-size($small) {
-    position: static;
+    position: relative;
+    top: 0;
     display: flex;
     flex-direction: column;
     box-shadow: none;
@@ -103,7 +104,8 @@
       font-size: 24px;
 
       @include max-size($small) {
-        position: static;
+        position: relative;
+        top: auto;
       }
     }
 
