--- a/src/scss/globals/_mixins.scss
+++ b/src/scss/globals/_mixins.scss
@@ -52,6 +52,7 @@ $animation-timing-function: ease-in-out;
 
 @mixin outline($color: $color-blue-30, $size: 2px) {
   outline: $size solid $color;
+  outline-offset: 2px;
 }
 
 @mixin grid-template-column($size: 300px) {
