--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -74,6 +74,7 @@ h3 {
 a {
   text-decoration: none;
   color: $color-dust-red-20;
+  position: relative;
 
   &:focus-visible {
     outline: 2px solid currentcolor;
