--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -4,10 +4,8 @@ button[aria-disabled='true'] {
   pointer-events: none;
   background-color: $color-secondary;
   color: $color-gray-60;
-  border-color: $color-border;
 
   &.btn-ghost {
-    border-color: transparent;
     background-color: transparent;
     color: $color-gray-60;
   }
@@ -25,7 +23,7 @@ a[class^='btn-'],
   padding: 16px;
   border-radius: 4px;
   width: 100%;
-  border: 1px solid transparent;
+  border: none;
   cursor: pointer;
   min-height: rem(60px);
   letter-spacing: rem(0.5px);
@@ -36,7 +34,7 @@ a[class^='btn-'],
   &::after {
     content: '';
     position: absolute;
-    inset: -10px;
+    inset: -15px;
   }
 }
 
@@ -47,8 +45,6 @@ a[class^='btn-'],
 
   &:hover,
   &:focus-visible {
-    border: 1px solid $color-white;
-
     @include outline($color-primary);
   }
 }
@@ -57,7 +53,7 @@ a[class^='btn-'],
 .btn-secondary {
   background-color: $color-white;
   color: $color-primary;
-  border-color: $color-primary;
+  border: 1px solid $color-primary;
 
   &:focus-visible,
   &:hover {
@@ -68,7 +64,6 @@ a[class^='btn-'],
 
 // Default button
 .btn-default {
-  border-color: $color-border;
   background-color: $color-secondary;
   padding: 8px 32px;
   min-height: auto;
@@ -76,8 +71,6 @@ a[class^='btn-'],
 
   &:hover,
   &:focus-visible {
-    border: 1px solid $color-white;
-
     @include outline($color-gray-40);
   }
 }
@@ -89,8 +82,6 @@ a[class^='btn-'],
 
   &:hover,
   &:focus-visible {
-    border: 1px solid $color-white;
-
     @include outline($color-danger);
   }
 }
@@ -100,7 +91,6 @@ a[class^='btn-'],
 .btn-ghost {
   background-color: transparent;
   color: $color-primary;
-  border: 2px solid transparent;
   width: fit-content;
   min-height: auto;
   padding: 0;
