--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -29,6 +29,14 @@ dialog {
     }
   }
 
+  .control-list {
+    .control-item {
+      &:has(input:focus) {
+        @include outline;
+      }
+    }
+  }
+
   &.modal-sm {
     max-width: rem(500px);
 
