--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -89,11 +89,12 @@ a[class^='btn-'],
 // Ghost button
 .btn-ghost {
   background-color: transparent;
-  color: $color-primary;
+  color: $color-dust-red-20;
   width: fit-content;
   min-height: auto;
   padding: 0;
   font-size: $font-small;
+  border-radius: 0;
 
   &:hover,
   &:focus-visible {
