--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -29,40 +29,11 @@
     pointer-events: auto;
   }
 
-  @include max-size($small) {
-    position: relative;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    box-shadow: none;
-    background-color: inherit;
-  }
-
   .sub-nav {
     position: relative;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     width: 100%;
-
-    @include max-size($small) {
-      display: flex;
-      flex-direction: column;
-
-      .sub-nav-item:not(.sub-nav-ad) {
-        padding: 0 40px;
-
-        a {
-          border-bottom: 1px solid $color-gray-60;
-          padding: 8px 12px;
-          font-size: $font-small;
-
-          &.active {
-            background-color: $color-gray-80;
-            color: $color-white;
-          }
-        }
-      }
-    }
   }
 
   .sub-nav-content {
@@ -89,29 +60,19 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: top right;
-
-      @include max-size($small) {
-        padding: 32px 20px;
-        margin-top: 12px;
-      }
-    }
-
-    .ad-heading {
-      position: absolute;
-      top: 24px;
-      left: 24px;
-      max-width: 40%;
-      font-size: 24px;
-
-      @include max-size($small) {
-        position: relative;
-        top: auto;
-      }
     }
 
     &.background-gray {
       background-color: $color-light-gray-30;
     }
+  }
+
+  .ad-heading {
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    max-width: 40%;
+    font-size: 24px;
   }
 
   .sub-nav-heading {
@@ -133,5 +94,46 @@
       min-height: 20px;
       padding: 12px 28px;
     }
+  }
+}
+
+@include max-size($small) {
+  .sub-nav-container {
+    position: relative;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    box-shadow: none;
+    background-color: inherit;
+
+    .sub-nav {
+      display: flex;
+      flex-direction: column;
+
+      .sub-nav-item:not(.sub-nav-ad) {
+        padding: 0 40px;
+
+        a {
+          border-bottom: 1px solid $color-gray-60;
+          padding: 8px 12px;
+          font-size: $font-small;
+
+          &.active {
+            background-color: $color-gray-80;
+            color: $color-white;
+          }
+        }
+      }
+    }
+
+    .ad-heading {
+      position: relative;
+      top: auto;
+    }
+  }
+
+  .sub-nav-ad {
+    padding: 32px 20px;
+    margin-top: 12px;
   }
 }
