--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -66,6 +66,7 @@
     grid-row: span 2;
     display: grid;
     grid-template-rows: subgrid;
+    position: relative;
   }
 
   .product-card-img {
