--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -67,6 +67,10 @@
     display: grid;
     grid-template-rows: subgrid;
     position: relative;
+
+    &:has(a:focus-visible) {
+      @include outline;
+    }
   }
 
   .product-card-img {
@@ -96,6 +100,19 @@
         grid-row: none;
       }
     }
+  }
+}
+
+.shopping-bag-container {
+  position: absolute;
+  top: 470px;
+  z-index: 2;
+  right: 8px;
+  border-radius: 4px;
+
+  .btn-primary {
+    padding: 12px;
+    min-height: auto;
   }
 }
 
