--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -33,6 +33,14 @@
   }
 }
 
+.favorites-page {
+  .product-card-list {
+    .product-card {
+      max-width: rem(400px);
+    }
+  }
+}
+
 .product-card-content {
   display: flex;
   flex-direction: column;
