--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -85,7 +85,7 @@
       margin: 0;
     }
 
-    .product-img-item {
+    .product-img {
       width: 100%;
       height: rem(124px);
       object-fit: cover;
