--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -56,3 +56,13 @@
     flex-direction: column;
   }
 }
+
+.product-img-list {
+  display: flex;
+  gap: 4px;
+  margin-bottom: 12px;
+
+  @include max-size($small) {
+    margin: 0;
+  }
+}
