--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -47,11 +47,7 @@ $animation-distance: 500px;
   background: $color-white;
 
   @supports (animation-timeline: view()) {
-    top: -80px;
-    border-radius: 14px;
-    padding-inline: 24px;
-    margin-inline: auto;
-    animation: sticky-nav linear forwards;
+    animation: sticky-header linear forwards;
     animation-timeline: view();
     animation-range-start: calc(100dvh + $animation-starts-after);
     animation-range-end: calc(
@@ -129,12 +125,8 @@ $animation-distance: 500px;
   }
 }
 
-@keyframes sticky-nav {
+@keyframes sticky-header {
   100% {
-    width: 95%;
     top: 16px;
-    box-shadow:
-      inset 0 0 0.5rem hsl(0deg 0% 100% / 10%),
-      0 0 0.75rem hsl(0deg 0% 0% / 30%);
   }
 }
