--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -76,6 +76,10 @@
     display: flex;
     flex-direction: column;
     max-width: rem(400px);
+
+    p {
+      text-wrap: pretty;
+    }
   }
 
   .grid-item-1 {
