--- a/src/components/carousel/_carousel.scss
+++ b/src/components/carousel/_carousel.scss
@@ -6,11 +6,19 @@
   grid-auto-columns: 24%;
   overflow-x: auto;
   width: fit-content;
-  margin-bottom: 12px;
   anchor-name: --carousel;
   scroll-snap-type: x mandatory;
   scroll-marker-group: after;
   scroll-behavior: smooth;
+
+  @include max-size($medium) {
+    grid-auto-columns: 40%;
+  }
+
+  @include max-size($mini) {
+    grid-auto-columns: 100%;
+    gap: 2px;
+  }
 
   .carousel-item {
     scroll-snap-align: center;
@@ -21,6 +29,7 @@
       height: rem(500px);
       object-fit: cover;
       object-position: top;
+      border-radius: 0;
     }
   }
 
@@ -30,34 +39,45 @@
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    background-color: #366894;
+    background-color: $color-gray-30;
     display: grid;
   }
 
   /* stylelint-disable-next-line selector-pseudo-class-no-unknown */
   .carousel-item::scroll-marker:target-current {
-    background: red;
+    background-color: $color-gray-60;
   }
 
   &::scroll-marker-group {
     display: flex;
     gap: 12px;
     justify-content: center;
+    margin-top: 12px;
   }
 
   // Scroll Buttons
   &::scroll-button(*) {
     position: fixed;
     position-anchor: --carousel;
+    background-color: $color-white;
+    display: inline-grid;
+    place-content: center;
+    border: 1px solid $color-gray-30;
+    border-radius: 50%;
+    cursor: pointer;
+    width: rem(40px);
+    height: rem(40px);
   }
 
   &::scroll-button(left) {
-    content: '⬅' / 'Scroll Left';
+    content: '\276E' / 'Scroll Left';
     position-area: center left;
+    transform: translateX(19px);
   }
 
   &::scroll-button(right) {
-    content: '⮕' / 'Scroll Right';
+    content: '\276F' / 'Scroll Right';
     position-area: center right;
+    transform: translateX(-19px);
   }
 }
