--- a/src/pages/MainCollectionPage.styles.scss
+++ b/src/pages/MainCollectionPage.styles.scss
@@ -12,7 +12,7 @@
   }
 
   .collections-item {
-    background: $color-background;
+    background-color: $color-background;
     width: 100%;
     display: flex;
     align-items: center;
