--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -44,7 +44,7 @@ $animation-distance: 500px;
   position: sticky;
   z-index: 1000;
   top: 0;
-  background: $color-white;
+  background-color: $color-white;
 
   @supports (animation-timeline: view()) {
     animation: sticky-header linear forwards;
