--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -51,7 +51,7 @@
 
   .hero-btn-decoration {
     height: 2px;
-    background: $color-dust-red-20;
+    background-color: $color-dust-red-20;
     width: 100%;
   }
 
