--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -32,7 +32,7 @@
 .missing-img {
   width: rem(200px);
   height: rem(112px);
-  background: $color-light-gray-30;
+  background-color: $color-light-gray-30;
   display: inline-grid;
   place-content: center;
   border-radius: 4px;
