--- a/src/pages/MainCollectionPage.styles.scss
+++ b/src/pages/MainCollectionPage.styles.scss
@@ -43,7 +43,7 @@
       overflow: auto;
     }
 
-    &:last-child {
+    &:nth-child(3) {
       grid-column: span 2;
 
       @include max-size($small) {
