--- a/src/features/products/components/starRating/_reviews.scss
+++ b/src/features/products/components/starRating/_reviews.scss
@@ -1,7 +1,7 @@
 @use '../../../../scss/globals' as *;
 
-.review {
-  display: flex;
+.review,
+.ratings {
   position: relative;
   color: $color-warning;
 }
@@ -20,4 +20,28 @@
   position: absolute;
   left: 20px;
   fill: $color-gray-70;
+}
+
+/* StarRating.scss */
+.star-rating {
+  display: flex;
+  gap: 5px;
+
+  .star {
+    cursor: pointer;
+
+    input {
+      display: none;
+    }
+
+    .star-icon {
+      font-size: 2rem;
+      color: #ccc;
+      transition: color 0.2s;
+    }
+
+    .filled {
+      color: gold;
+    }
+  }
 }
