--- a/src/features/products/components/starRating/_reviews.scss
+++ b/src/features/products/components/starRating/_reviews.scss
@@ -22,26 +22,25 @@
   fill: $color-gray-70;
 }
 
-/* StarRating.scss */
 .star-rating {
   display: flex;
   gap: 5px;
 
-  .star {
-    cursor: pointer;
+  .star-icon {
+    font-size: 2rem;
+    color: #ccc;
+    transition: color 0.2s;
 
-    input {
-      display: none;
-    }
-
-    .star-icon {
-      font-size: 2rem;
-      color: #ccc;
-      transition: color 0.2s;
-    }
-
-    .filled {
+    &.filled {
       color: gold;
     }
+  }
+
+  input {
+    display: none;
+  }
+
+  label {
+    cursor: pointer;
   }
 }
