--- a/src/adminLayout/AdminLayout.styles.scss
+++ b/src/adminLayout/AdminLayout.styles.scss
@@ -3,6 +3,15 @@
 .admin {
   background-color: $color-background;
   justify-content: center;
+
+  .control-list {
+    .control-item {
+      &:has(input:checked) {
+        background-color: $color-background-secondary;
+        color: $color-white;
+      }
+    }
+  }
 }
 
 .dashboard-container {
