--- a/src/features/products/components/starRating/_reviews.scss
+++ b/src/features/products/components/starRating/_reviews.scss
@@ -30,4 +30,31 @@
       color: $color-yellow;
     }
   }
+
+  .review-textbox {
+    overflow: hidden;
+    max-height: 0;
+    opacity: 0;
+    transform: translateY(0);
+    transition: max-height 0.4s ease;
+
+    &.visible {
+      @include animation($name: textbox-reveal, $duration: 1.45s);
+    }
+  }
+}
+
+// keyframes for reveal
+@keyframes textbox-reveal {
+  0% {
+    opacity: 0;
+    transform: translateY(0);
+    max-height: 0;
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+    max-height: 999px;
+  }
 }
