do not tab in hidden textarea

--- a/src/features/products/components/reviews/_reviews.scss
+++ b/src/features/products/components/reviews/_reviews.scss
@@ -37,7 +37,7 @@
   opacity: 0;
   transform: translateY(0);
   transition: max-height 0.4s ease;
-  overflow: hidden;
+  overflow: clip;
 
   &.visible {
     @include animation($name: textbox-reveal, $duration: 1s);
