--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -2,7 +2,7 @@
 
 .visually-hidden {
   clip: rect(1px, 1px, 1px, 1px);
-  overflow: hidden;
+  overflow: clip;
   position: absolute !important;
   white-space: nowrap;
   height: 1px;
