--- a/src/features/products/components/reviews/_reviews.scss
+++ b/src/features/products/components/reviews/_reviews.scss
@@ -1,54 +1,54 @@
 @use '../../../../scss/globals' as *;
 
-// .review,
-// .ratings {
-//   position: relative;
-//   color: $color-warning;
-// }
+.review-display {
+  position: relative;
+  color: $color-warning;
 
-// .star {
-//   font-size: rem(24px);
-//   color: $color-gray-70;
-// }
+  .star {
+    font-size: rem(24px);
+    color: $color-gray-70;
+  }
 
-// .star.filled {
-//   color: $color-yellow;
-// }
+  .star.filled {
+    color: $color-yellow;
+  }
 
-// .half-star-right {
-//   transform: scaleX(-1);
-//   position: absolute;
-//   left: 20px;
-//   fill: $color-gray-70;
-// }
+  .half-star-right {
+    transform: scaleX(-1);
+    position: absolute;
+    left: 20px;
+    fill: $color-gray-70;
+  }
+}
 
-.reviews {
-  svg {
-    @include transition($time: 0.2s);
+.review-form {
+  .reviews {
+    svg {
+      @include transition($time: 0.2s);
 
-    &.filled {
-      color: $color-yellow;
+      &.filled {
+        color: $color-yellow;
+      }
+    }
+  }
+
+  .review-textbox {
+    max-height: 0;
+    opacity: 0;
+    transform: translateY(0);
+    transition: max-height 0.4s ease;
+    overflow: clip;
+
+    &.visible {
+      @include animation($name: textbox-reveal, $duration: 1s);
+    }
+
+    .form-label-container {
+      margin-block: 16px 4px;
     }
   }
 }
 
-.review-textbox {
-  max-height: 0;
-  opacity: 0;
-  transform: translateY(0);
-  transition: max-height 0.4s ease;
-  overflow: clip;
-
-  &.visible {
-    @include animation($name: textbox-reveal, $duration: 1s);
-  }
-
-  .form-label-container {
-    margin-block: 16px 4px;
-  }
-}
-
-// keyframes for reveal
 @keyframes textbox-reveal {
   0% {
     opacity: 0;
