--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -20,8 +20,8 @@ $animation-distance: 500px;
   }
 
   svg {
-    height: 24px;
-    width: 24px;
+    height: rem(24px);
+    width: rem(24px);
   }
 
   .logo {
