--- a/src/scss/variables.module.scss
+++ b/src/scss/variables.module.scss
@@ -11,7 +11,7 @@
   paddingBlockLarge: $padding-block-large;
   colorSuccess: $color-success;
   colorInfo: $color-info;
-  colorWarning: $color-warning;
+  colorYellow: $color-yellow;
   colorError: $color-danger;
   colorIconBorder: $color-gray-70;
 }
