--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -15,7 +15,7 @@
 
 .product-img-container {
   position: relative;
-  overflow: hidden;
+  overflow: clip;
 
   .favorites-label {
     position: absolute;
@@ -58,7 +58,7 @@
 .product-card-list {
   display: grid;
 
-  @include grid-template-column();
+  @include grid-template-column;
 
   grid-auto-rows: rem(520px) auto;
   container-type: inline-size;
@@ -70,7 +70,7 @@
     position: relative;
 
     &:has(a:focus-visible) {
-      @include outline();
+      @include outline;
     }
   }
 
