favorit hart fontsize

--- a/src/components/favorites/_favorites-heart.scss
+++ b/src/components/favorites/_favorites-heart.scss
@@ -24,7 +24,7 @@
   }
 
   .heart-icon {
-    font-size: 2rem;
+    font-size: rem(16px);
     background: none;
     border: none;
     cursor: pointer;
