--- a/src/components/formElements/radiobuttons/_radio-button.scss
+++ b/src/components/formElements/radiobuttons/_radio-button.scss
@@ -7,15 +7,17 @@
 
 .radio-btn-content {
   width: 100%;
+  max-height: $input-height;
 
   &:has(input:focus-visible) {
     @include outline;
   }
 
   .radio-btn-label {
-    width: 100%;
-    display: inline-grid;
-    place-content: center;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
     text-transform: uppercase;
 
