--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -135,6 +135,10 @@ table {
       display: flex;
       justify-content: space-between;
 
+      .radio-btn-content {
+        max-height: rem(36px);
+      }
+
       .input-container {
         width: auto;
       }
