--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -47,18 +47,14 @@ $animation-distance: 500px;
   background-color: $color-white;
 
   @supports (animation-timeline: view()) {
-    animation: sticky-header linear forwards;
-    animation-timeline: view();
-    animation-range-start: calc(100dvh + $animation-starts-after);
-    animation-range-end: calc(
-      100dvh + $animation-starts-after + $animation-distance
-    );
-
-    @media (prefers-reduced-motion) {
-      top: 0;
-
+    @media (prefers-reduced-motion: no-preference) {
       & {
-        animation: none;
+        animation: sticky-header linear forwards;
+        animation-timeline: view();
+        animation-range-start: calc(100dvh + $animation-starts-after);
+        animation-range-end: calc(
+          100dvh + $animation-starts-after + $animation-distance
+        );
       }
     }
   }
