$color-link-hover

--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -16,6 +16,10 @@
     text-transform: uppercase;
     padding: 8px;
 
+    &:hover {
+      color: $color-link-hover;
+    }
+
     &:focus-visible {
       @include outline;
     }
