--- a/src/pages/home/fashionGrid/_fashion-grid.scss
+++ b/src/pages/home/fashionGrid/_fashion-grid.scss
@@ -69,7 +69,7 @@
       justify-content: flex-end;
 
       &:hover {
-        color: $color-blue-30;
+        color: $color-link-hover;
       }
     }
   }
