--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -97,7 +97,7 @@ a[class^='btn-'],
   border-radius: 0;
 
   &:hover {
-    color: $color-blue-30;
+    color: $color-link-hover;
   }
 
   &:focus-visible {
