--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -36,6 +36,7 @@ $color-light-gray-40: #e9e9ea;
 $color-border: $color-gray-30;
 $color-border-dark: $color-gray-60;
 $color-border-radio: $color-blue-30;
+$color-link-hover: $color-blue-30;
 $color-primary: $color-gray-80;
 $color-secondary: $color-light-gray-30;
 $color-background: $color-light-gray-20;
